Fixed checkbox visibility in reg.css

--- a/register/reg.css
+++ b/register/reg.css
@@ -266,6 +266,7 @@ body{
   width: initial;
   display: inline-block;
   width: 0px;
+  visibility: hidden;
 }
 
 .checkbox-desc-label, label.yesno-value  {
